Fix align issue inside InputGroup, close #4680

--- a/components/input/style/mixin.less
+++ b/components/input/style/mixin.less
@@ -243,6 +243,7 @@
     & > * {
       border-radius: 0;
       border-right-width: 0;
+      vertical-align: middle;
     }
 
     // Undo float for .ant-input-group .ant-input
